Test/5-1_cluster.clu
Cluster size 5
Cluster number 10105        # E:      Factor:7  P:  , Ori size:5    Sub:5    From:1           
   5    1     1b3ua             149-336    1   leng: 187
   5    1     1b3ub             149-336    1   leng: 187
   5    1     1ibrb             259-457    1   leng: 198
   5    1     1qgka             260-468    1   leng: 208
   5    1     1qgra             260-468    1   leng: 208
Cluster size 3
Cluster number 10203        # E:      Factor:7  P:  , Ori size:5    Sub:3    From:1           
   3    1     1ibrb             1-458      1   leng: 457
   3    1     1qgka             1-748      1   leng: 747
   3    1     1qgra             1-744      1   leng: 743
Cluster size 2
Cluster number 10302        # E:      Factor:7  P:  , Ori size:5    Sub:2    From:1           
   2    1     1b3ua             1-588      1   leng: 587
   2    1     1b3ub             1-588      1   leng: 587
